Update and trying to debug

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,23 @@
 services:
   go2:
     image: unitree-go2-docker:latest
-    ports:
-      - "8080:8080"
+#    ports:
+#      - "8080:8080"
 
     # We can't do this at this moment as in our repo we have `unitree_ros` as a submodule
     # so `unitree_ros/install` will be empty in our repo but it should be generated during
     # docker build.
     # volumes:
     #  - .:/app
+    volumes:
+      - ./src:/app/src
+#      - /dev:/dev
 
     privileged: true
     network_mode: "host"
+    ipc: "host"
     stdin_open: true
     tty: true
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
+      - ROS_DOMAIN_ID=0
