--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,4 +20,4 @@ services:
     tty: true
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
-      - ROS_DOMAIN_ID=0
+      - GO2_NETWORK_INTERFACE=enp8s0
