refactor code, don't copy unitree_sdk2

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "unitree_ros2"]
 	path = unitree_ros2
 	url = https://github.com/unitreerobotics/unitree_ros2
+[submodule "go2/unitree_sdk2_submodule"]
+	path = go2/unitree_sdk2
+	url = https://github.com/unitreerobotics/unitree_sdk2.git
