--- a/go2/unitree_sdk2/example/g1/CMakeLists.txt
+++ b/go2/unitree_sdk2/example/g1/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 add_executable(g1_loco_client high_level/g1_loco_client_example.cpp)
 target_link_libraries(g1_loco_client unitree_sdk2)
 
@@ -17,6 +16,15 @@ target_link_libraries(g1_audio_client_example unitree_sdk2)
 add_executable(g1_dex3_example dex3/g1_dex3_example.cpp)
 target_link_libraries(g1_dex3_example unitree_sdk2)
 
+find_package(Boost COMPONENTS program_options)
+if(Boost_FOUND)
+    add_executable(g1_termination low_level/terminations.cpp)
+    target_link_libraries(g1_termination unitree_sdk2 Boost::program_options)
+
+    add_executable(g1_arm_action_example high_level/g1_arm_action_example.cpp)
+    target_link_libraries(g1_arm_action_example unitree_sdk2 Boost::program_options)
+endif()
+
 find_package(yaml-cpp QUIET)
 if(yaml-cpp_FOUND)
     if (${yaml-cpp_VERSION} VERSION_GREATER_EQUAL "0.6")
@@ -28,3 +36,6 @@ if(yaml-cpp_FOUND)
         message(STATUS "yaml-cpp version ${yaml-cpp_VERSION} is too old, skipping build of g1_dual_arm_example.")
     endif()
 endif()
+
+add_executable(g1_agv_client_example agv/g1_agv_client_example.cpp)
+target_link_libraries(g1_agv_client_example unitree_sdk2)
