replace unitree_ros2 by submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "go2/unitree_sdk2_submodule"]
 	path = go2/unitree_sdk2
 	url = https://github.com/unitreerobotics/unitree_sdk2.git
+[submodule "go2/unitree_ros2_submodule"]
+	path = go2/unitree_ros2
+	url = https://github.com/unitreerobotics/unitree_ros2.git
